--- a/pom.xml
+++ b/pom.xml
@@ -13,8 +13,8 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
-        <dropwizard.version>1.3.1</dropwizard.version>
-        <metrics4.version>4.1.0-rc2</metrics4.version><!-- Should match definition in dropwizard-bom -->
+        <dropwizard.version>2.0.8</dropwizard.version>
+        <metrics4.version>4.1.6</metrics4.version><!-- Should match definition in dropwizard-bom -->
     </properties>
 
     <licenses>
@@ -59,9 +59,18 @@
 
     <dependencyManagement>
         <dependencies>
+            <!--
             <dependency>
                 <groupId>io.dropwizard</groupId>
                 <artifactId>dropwizard-bom</artifactId>
+                <version>${dropwizard.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            -->
+            <dependency>
+                <groupId>io.dropwizard</groupId>
+                <artifactId>dropwizard-dependencies</artifactId>
                 <version>${dropwizard.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
@@ -73,6 +82,7 @@
         <dependency>
             <groupId>io.dropwizard.metrics</groupId>
             <artifactId>metrics-core</artifactId>
+            <version>${metrics4.version}</version>
         </dependency>
         <dependency>
             <groupId>io.dropwizard.metrics</groupId>
