--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <groupId>me.g-fresh</groupId>
     <artifactId>dropwizard-metrics-collectd</artifactId>
     <packaging>jar</packaging>
-    <version>1.3.1-SNAPSHOT</version>
+    <version>2.0.8-SNAPSHOT</version>
     <name>dropwizard-metrics-collectd</name>
     <description>Dropwizard Metrics Collectd Integration</description>
     <url>http://github.com/g-fresh/dropwizard-metrics-collectd</url>
@@ -14,7 +14,7 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <dropwizard.version>2.0.8</dropwizard.version>
-        <metrics4.version>4.1.6</metrics4.version><!-- Should match definition in dropwizard-bom -->
+        <metrics4.version>4.1.6</metrics4.version><!-- Should match definition in dropwizard-dependecies -->
     </properties>
 
     <licenses>
@@ -59,15 +59,6 @@
 
     <dependencyManagement>
         <dependencies>
-            <!--
-            <dependency>
-                <groupId>io.dropwizard</groupId>
-                <artifactId>dropwizard-bom</artifactId>
-                <version>${dropwizard.version}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-            -->
             <dependency>
                 <groupId>io.dropwizard</groupId>
                 <artifactId>dropwizard-dependencies</artifactId>
@@ -178,7 +169,7 @@
                 <plugin>
                     <groupId>org.jacoco</groupId>
                     <artifactId>jacoco-maven-plugin</artifactId>
-                    <version>0.8.1</version>
+                    <version>0.8.5</version>
                 </plugin>
                 <plugin>
                     <groupId>org.eluder.coveralls</groupId>
